Migrate all the usage of com.google.common.collect.ImmutableList to java.util.List Enforce checkstyle failure for com.google.common.collect.ImmutableList