@@ -20,7 +20,6 @@ package org.apache.pinot.integration.tests.custom;
 
 import com.dynatrace.hash4j.distinctcount.UltraLogLog;
 import com.fasterxml.jackson.databind.JsonNode;
-import com.google.common.collect.ImmutableList;
 import java.io.File;
 import java.nio.ByteBuffer;
 import java.util.Base64;
@@ -128,7 +127,7 @@ public class ULLTest extends CustomDataQueryClusterIntegrationTest {
       throws Exception {
     // create avro schema
     org.apache.avro.Schema avroSchema = org.apache.avro.Schema.createRecord("myRecord", null, null, false);
-    avroSchema.setFields(ImmutableList.of(
+    avroSchema.setFields(List.of(
         new org.apache.avro.Schema.Field(ID, org.apache.avro.Schema.create(org.apache.avro.Schema.Type.INT), null,
             null), new org.apache.avro.Schema.Field(COLUMN,
             org.apache.avro.Schema.create(org.apache.avro.Schema.Type.BYTES), null, null)));
